--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,15 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+ttt-worldwide is a silly project for TTT group chat. It posts location to an api and displays on a map.
 
-Things you may want to cover:
+Stuffs Used:
 
-* Ruby version
+* geocoder gem
 
-* System dependencies
+* rails_admin gem
 
-* Configuration
+* leafletjs map
 
-* Database creation
+* simple api
 
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+http://ttt-worldwide.herokuapp.com
